GET EventDetails and fix tag white space

--- a/frontend/src/pages/CourseDetails/styles.css
+++ b/frontend/src/pages/CourseDetails/styles.css
@@ -126,6 +126,7 @@
     display: inline-block;
     padding-right: 10px;
     text-transform: lowercase;
+    margin-bottom: 5px;
 }
 
 
